# scalerhack_round2_monopoly_teamtds

./: .gitignore  README.md  hackathon_instrcutions.md
backend/monopoly_env/: Dockerfile  README.md  __init__.py  client.py  game_data.py  models.py  openenv.yaml  pyproject.toml  simulator.py  training.py
backend/monopoly_env/outputs/demo/: best_rollout.json  training_metrics.json
backend/monopoly_env/server/: Dockerfile  __init__.py  app.py  monopoly_env_environment.py
backend/monopoly_env/static_site/: __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
backend/monopoly_env/static_site/_next/static/chunks/: 07~i0u9ruzxyn.css  0ne2_00d5leqo.js  turbopack-0ikejbk8pggqy.js
backend/monopoly_env/static_site/_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
docs/: pitch_deck.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: monopoly-dashboard.tsx
notebooks/: openmonopoly_training_colab.ipynb
